# book-recommender-system

./: .env.sample  .gitignore  LICENSE  Readme.md  cronjob.dockerfile  db_store.py  dockerfile  dummy_data.py  pyproject.toml  requirements.txt
.github/workflows/: deployment.yml  schedule.yml
app/: main.py
app/db/: connection.py
app/models/: tfidf_vectorizer.joblib  word2vec_model_recommender.joblib
app/services/: auto_predict_service.py  books_service.py  classification_service.py  recommender_service.py
app/utils/: api_utils.py
