[tool.poetry]
name = "capstone"
version = "0.1.0"
description = ""
authors = ["None"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.109.2"
uvicorn = {extras = ["standard"], version = "^0.27.0.post1"}
pandas = "^2.2.0"
scikit-learn = "1.2.2"
python-multipart = "^0.0.9"
dill = "^0.3.8"
gensim = "^4.3.2"
boto3 = "^1.34.49"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
